#36 Fix datetime dark mode

--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -130,8 +130,8 @@
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255, 255, 255;
 
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
+    --ion-color-step-50: #101010;
+    --ion-color-step-100: #0d0d0e;
     --ion-color-step-150: #363636;
     --ion-color-step-200: #414141;
     --ion-color-step-250: #4d4d4d;
@@ -163,4 +163,11 @@
 
     --ion-card-background: #0d0d0e;
   }
+}
+
+/* overrides */
+
+ion-datetime {
+  height: 100%;
+  max-width: 100%;
 }
